# ChallongeSoku

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
gui/: color.gui  main_screen.gui  match.gui  settings.gui
pkgs/: FindSFML.cmake  FindTGUI.cmake
src/: SecuredWebSocket.cpp  SecuredWebSocket.hpp  Utils.cpp  Utils.hpp  main.cpp
